--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:grobid-trainer.helloWorld"
+		"onCommand:grobid-trainer.openTrainingFiles"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
 			{
-				"command": "grobid-trainer.helloWorld",
-				"title": "Hello World"
+				"command": "grobid-trainer.openTrainingFiles",
+				"title": "Given a DOI, open GROBID training files"
 			}
 		]
 	},
@@ -30,16 +30,19 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.57.0",
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.2.2",
 		"@types/node": "14.x",
-		"eslint": "^7.27.0",
+		"@types/vscode": "^1.57.0",
 		"@typescript-eslint/eslint-plugin": "^4.26.0",
 		"@typescript-eslint/parser": "^4.26.0",
+		"eslint": "^7.27.0",
 		"glob": "^7.1.7",
 		"mocha": "^8.4.0",
 		"typescript": "^4.3.2",
 		"vscode-test": "^1.5.2"
+	},
+	"dependencies": {
+		"webdav": "^4.6.0"
 	}
 }
